--- a/maestro-flows/cart_flow.yaml
+++ b/maestro-flows/cart_flow.yaml
@@ -2,15 +2,13 @@ appId: "com.shoppingapp"
 ---
 - launchApp
 
+- assertVisible: "product_list"
+
 - tapOn:
     id: "product_4_add_button"
-
 
 - tapOn:
     id: "cart_icon"
 
 - tapOn:
     id: "cart_item_delete_4"
-
-- tapOn:
-    id: "home_icon"
